testsuite/tests/ghc-regress/rename/should_compile/RnAux017.hs
{-# OPTIONS -fglasgow-exts #-}

module RnAux017 where

data Wibble 
data Wobble

a :: Int -> Int
a = undefined

b :: Int -> Int
b = undefined

c :: Int -> Int
c = undefined
